2002-02-08  Damon Chaplin  <damon@ximian.com>

	* apps.html: updated link to Oww.

2002-02-06  Damon Chaplin  <damon@ximian.com>

	* index.html: 
	* download.html: 
	* history.html: added 0.6.4 release stuff.

2002-02-04  Damon Chaplin  <damon@ximian.com>

	* apps.html: added AVR Delay loop Generator.

2002-01-18  Damon Chaplin  <damon@ximian.com>

	* index.html: added new tutorial.

	* download.html: updated last stable version to 0.6.2.

2002-01-07  Damon Chaplin  <damon@ximian.com>

	* apps.html: added BookBase and GnomeZine.

2001-12-13  Damon Chaplin  <damon@ximian.com>

	* apps.html: added GCronTime.

2001-12-10  Damon Chaplin  <damon@ximian.com>

	* apps.html: added ROME Target Builder.

2001-11-28  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gmp3burn.

2001-11-07  Damon Chaplin  <damon@ximian.com>

	* apps.html: added PPPMON.

	* index.html: added 2 news items.

2001-10-11  Damon Chaplin  <damon@ximian.com>

	* apps.html: added Terraform.

2001-10-02  Damon Chaplin  <damon@ximian.com>

	* links.html: added links for Ruby.

	* apps.html: commented out a few broken links, and updated a few.
	I didn't manage to check through many, though.
	Added dSQL.

2001-08-22  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to Spanish translation of FAQ.

	* apps.html: updated Lycadican link & added several new apps.

2001-07-13  Damon Chaplin  <damon@ximian.com>

	* apps.html: added 2 more apps.

2001-06-25  Damon Chaplin  <damon@ximian.com>

	* FAQ: fixed link to http://glade.gnome.org

2001-06-21  Damon Chaplin  <damon@ximian.com>

	* index.html: added link to new French translation of FAQ.

	* apps.html: added Intra Chat.

2001-06-14  Damon Chaplin  <damon@ximian.com>

	* FAQ: sync'ed with FAQ in glade.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* apps.html: added gsensor.

2001-05-14  Damon Chaplin  <damon@ximian.com>

	* apps.html: added 3 new apps.

2001-04-27  Damon Chaplin  <damon@ximian.com>

	* index.html: 