@@ -703,6 +703,14 @@ a simple app to create delay loops in assembler for AVR RISC processors.
 The users just specifies the time to delay.
 </ul>
 
+<ul>
+<li><a href="http://www.geocities.com/geuco">gEuCo</a> -
+the gnome Euro Conversor. It converts the currencies from the Euro countries
+to Euros and vice-versa.
+</ul>
+
+
+
 
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
