@@ -1,3 +1,7 @@
+2002-02-11  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added gEuCo.
+
 2002-02-08  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: updated link to Oww.
